# CropShield

./: .cursorrules  .env.example  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: data_sources.yaml  model_config.yaml  project.yaml  states.yaml
notebooks/: 01_data_audit.ipynb  02_feature_exploration.ipynb  03_model_results.ipynb
reports/: baseline_report.md  data_card.md  feature_ablation_report.md  final_report.md  ml_report.md  model_card.md  panel_audit.md
scripts/: 01_fetch_data.py  02_build_features.py  03_train_baselines.py  03_train_model.py  04_evaluate_model.py  04_train_ml_models.py  05_feature_ablation.py
src/cropshield/: __init__.py
src/cropshield/data/: __init__.py  build_county_panel.py  fetch_drought_monitor.py  fetch_nass.py  fetch_power.py  fips_utils.py
src/cropshield/evaluation/: __init__.py  error_analysis.py  metrics.py  panel_audit.py  validation_splits.py
src/cropshield/features/: __init__.py  drought_features.py  lag_features.py  panel_features.py  weather_anomalies.py  weather_features.py  yield_targets.py
src/cropshield/interpretability/: __init__.py  feature_importance.py  shap_analysis.py
tests/: test_baselines.py  test_checkpoint_logic.py  test_county_panel.py  test_drought_features.py  test_feature_engineering_prompt9.py  test_fips_csv_roundtrip.py  test_fips_handling.py  test_missing_malformed_data.py  test_ml_models.py  test_modeling_risk_labels.py  test_multi_checkpoint_panel.py  test_panel_multicrop_e2e.py  test_partial_year_weather.py  test_validation_splits.py  test_validation_splits_extended.py  test_weather_features.py  test_weather_leakage.py  test_yield_leakage_extended.py  test_yield_targets.py
(+10 files in other folders)
