[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cropshield"
version = "0.1.0"
description = "Drought-aware yield risk forecasting for U.S. corn and soybean counties"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "CropShield Project" }
]
keywords = ["agriculture", "machine-learning", "geospatial", "yield-forecasting", "drought"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "scikit-learn>=1.3.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
  "geopandas>=0.14.0",
  "shapely>=2.0.0",
  "matplotlib>=3.7.0",
  "plotly>=5.15.0",
  "seaborn>=0.12.0",
  "streamlit>=1.28.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
]
shap = [
  "shap>=0.43.0",
]
geo-extended = [
  "rasterio>=1.3.0",
  "rioxarray>=0.15.0",
  "xarray>=2023.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
